Atualizar regras, textos e imagens

--- a/site/index.html
+++ b/site/index.html
@@ -23,8 +23,8 @@
     <meta property="og:url" content="http://www.bgbh.com.br/">
     <meta property="og:description" content="Um portal feito para você que ama boardgame.">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="http://bgbh.com.br/images/logo_preto.png">
-    <meta property="og:image:secure_url" content="http://bgbh.com.br/images/logo_preto.png">
+    <meta property="og:image" content="http://bgbh.com.br/images/og-image.jpg">
+    <meta property="og:image:secure_url" content="http://bgbh.com.br/images/og-image.jpg">
 
     <link rel="icon" type="image/png" href="https://lucascmedeiros.com.br/bgbh/favicon.ico" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -128,13 +128,11 @@
                             <div class="col-12">
                                 <p class="regras-planilha">
                                     <i class="far fa-file-alt"></i> Confira as
-                                    <a href="/lista/regras-utilizacao-lista.html" target="_blank">
-                                        regras de utilização
-                                    </a>
-                                    da lista de trocas & vendas
+                                    <a href="/regras-lista.html" target="_blank">regras de utilização</a> da Lista de
+                                    Trocas & Vendas
                                 </p>
-                                <p class="highlight red aviso-responsabilidade">Nenhuma venda ou troca utilizando a
-                                    lista de trocas & vendas é de responsabilidade da Boardgame BH</p>
+                                <p class="highlight red aviso-responsabilidade">Nenhuma negociação utilizando a
+                                    Lista de Trocas & Vendas é de responsabilidade do Boardgame BH</p>
                             </div>
                         </div>
                     </section>
@@ -147,7 +145,7 @@
                     <!-- Feature 2 -->
                     <section class="container box feature2 banner-area banner-unico">
                         <div class="d-flex align-center justify-center banner-pequeno">
-                            <img class="banner-ads-90" src="images/banner-pequeno.png" alt="banner" />
+                            <img class="banner-ads-90" src="images/ads728x90.png" alt="banner" />
                         </div>
                     </section>
 
@@ -158,8 +156,8 @@
                 <div class="inner">
                     <!-- Feature 2 -->
                     <section class="container box feature2 d-flex align-center">
-                        <img class="banner-ads-273" src="images/banner-grande.png" alt="banner" />
-                        <img class="banner-ads-273" src="images/banner-grande.png" alt="banner" />
+                        <img class="banner-ads-270" src="images/ads500x270.png" alt="banner" />
+                        <img class="banner-ads-270" src="images/ads500x270.png" alt="banner" />
                     </section>
                 </div>
             </div>
@@ -172,10 +170,10 @@
                                 <div class="col-5 col-12-medium">
                                     <!-- Spotlight -->
                                     <section class="box spotlight secao-torneio">
-                                        <h2 class="font-800" data-aos="fade-down-right">
+                                        <h2 class="font-800" data-aos-duration="15000" data-aos="fade-down-right">
                                             <i class="fas fa-chess-rook"></i> Desafios e Torneios
                                         </h2>
-                                        <article data-aos="fade-right" data-aos-delay="300">
+                                        <article data-aos-duration="15000" data-aos="fade-right" data-aos-delay="300">
                                             <a href="#" class="image featured">
                                                 <img src="images/box-torneio.jpg" alt="imagem-torneio">
                                             </a>
@@ -209,7 +207,7 @@
 
                                     <!-- Article list -->
                                     <section class="box article-list">
-                                        <h2 class="font-800" data-aos="fade-down-left">
+                                        <h2 class="font-800" data-aos-duration="15000" data-aos="fade-down-left">
                                             <i class="fab fa-whatsapp"></i> Grupos de Whatsapp
                                         </h2>
 
@@ -218,9 +216,10 @@
                                             <a href="#" class="image imagem-grupos">
                                                 <img src="images/grupo-trocas.png"
                                                     alt="grupo de whatsapp trocas e vendas" class="auto-img"
-                                                    data-aos="zoom-in-right" />
+                                                    data-aos-duration="15000" data-aos="zoom-in-right" />
                                             </a>
-                                            <div class="descricao-grupos" data-aos="fade-left" data-aos-delay="300">
+                                            <div class="descricao-grupos" data-aos-duration="15000" data-aos="fade-left"
+                                                data-aos-delay="300">
                                                 <header class="titulos-grupos">
                                                     <h3><a href="#">BGBH - Trocas & Vendas</a>
                                                     </h3>
@@ -243,9 +242,11 @@
                                         <article class="box excerpt">
                                             <a href="#" class="image imagem-grupos">
                                                 <img src="images/grupo-resenha.png" alt="grupo de whatsapp resenha"
-                                                    class="auto-img" data-aos="zoom-in-right" />
+                                                    class="auto-img" data-aos-duration="15000"
+                                                    data-aos="zoom-in-right" />
                                             </a>
-                                            <div class="descricao-grupos" data-aos="fade-left" data-aos-delay="300">
+                                            <div class="descricao-grupos" data-aos-duration="15000" data-aos="fade-left"
+                                                data-aos-delay="300">
                                                 <header class="titulos-grupos">
                                                     <h3><a href="#">BGBH - Resenha BG</a></h3>
                                                 </header>
@@ -264,9 +265,11 @@
                                         <article class="box excerpt">
                                             <a href="#" class="image imagem-grupos">
                                                 <img src="images/grupo-ofertas.png" alt="grupo de whatsapp ofertas"
-                                                    class="auto-img" data-aos="zoom-in-right" />
+                                                    class="auto-img" data-aos-duration="15000"
+                                                    data-aos="zoom-in-right" />
                                             </a>
-                                            <div class="descricao-grupos" data-aos="fade-left" data-aos-delay="300">
+                                            <div class="descricao-grupos" data-aos-duration="15000" data-aos="fade-left"
+                                                data-aos-delay="300">
                                                 <header class="titulos-grupos">
                                                     <h3><a href="#">BGBH - Ofertas BG</a></h3>
                                                 </header>
@@ -295,8 +298,8 @@
             <div class="inner">
                 <!-- Feature 2 -->
                 <section class="container box feature2 ">
-                    <img class="banner-ads-273" src="images/banner-grande.png" alt="banner" />
-                    <img class="banner-ads-273" src="images/banner-grande.png" alt="banner" />
+                    <img class="banner-ads-270" src="images/ads500x270.png" alt="banner" />
+                    <img class="banner-ads-270" src="images/ads500x270.png" alt="banner" />
                 </section>
             </div>
         </div>
