--- a/site_old/index.html
+++ b/site_old/index.html
@@ -1054,8 +1054,8 @@
 
 
 
-              <a class="regras-planilha" href="/lista/regras-utilizacao-lista.html" target="_blank"
-                rel="noopener noreferrer" style="color: white;">
+              <a class="regras-planilha" href="/regras-lista.html" target="_blank" rel="noopener noreferrer"
+                style="color: white;">
                 REGRAS PARA UTILIZAÇÃO DA PLANILHA
                 <i class="fas fa-external-link-alt"></i>
               </a>
