Ajustar regras grupos

--- a/lista/regras-grupo-trocas.html
+++ b/lista/regras-grupo-trocas.html
@@ -94,6 +94,15 @@
                             <li>Publicidade externa, divulgação de outros canais, grupos, etc</li>
                         </ul>
                     </div>
+                    <div class="text-danger">
+                        É proibida a permanência de um mesmo usuário nos dois grupos. Ambos possuem a mesma finalidade
+                        e o segundo foi criado para possibilitar o acesso de mais pessoas após a lotação do primeiro.
+                        <br />
+                        <strong>
+                            Caso queira que sua oferta seja vista por usuários de ambos os grupos não deixe de utilizar
+                            a Lista de Trocas & Vendas do site.
+                        </strong>
+                    </div>
                 </div>
                 <div class="regras__evitar mt-4 text-primary">
                     <div class="font-800">EVITE</div>
