Adicionar links nos banners

--- a/site/index.html
+++ b/site/index.html
@@ -65,7 +65,9 @@
 
                 <!-- Banner -->
                 <div id="banner">
-                    <img class="w3-animate-zoom" src="images/bgbh-logo.png" alt="logo BGBH" />
+                    <a href="http://www.lucascmedeiros.com.br" target="_blank">
+                        <img class="w3-animate-zoom" src="images/bgbh-logo.png" alt="logo BGBH" />
+                    </a>
                 </div>
 
             </div>
@@ -145,7 +147,9 @@
                     <!-- Feature 2 -->
                     <section class="container box feature2 banner-area banner-unico">
                         <div class="d-flex align-center justify-center banner-pequeno">
-                            <img class="banner-ads-90" src="images/ads728x90.png" alt="banner" />
+                            <a href="http://www.lucascmedeiros.com.br" target="_blank">
+                                <img class="banner-ads-90" src="images/ads728x90.png" alt="banner" />
+                            </a>
                         </div>
                     </section>
 
@@ -156,8 +160,12 @@
                 <div class="inner">
                     <!-- Feature 2 -->
                     <section class="container box feature2 d-flex align-center">
-                        <img class="banner-ads-270" src="images/ads500x270.png" alt="banner" />
-                        <img class="banner-ads-270" src="images/ads500x270.png" alt="banner" />
+                        <a href="http://www.lucascmedeiros.com.br" target="_blank">
+                            <img class="banner-ads-270" src="images/ads500x270.png" alt="banner" />
+                        </a>
+                        <a href="http://www.lucascmedeiros.com.br" target="_blank">
+                            <img class="banner-ads-270" src="images/ads500x270.png" alt="banner" />
+                        </a>
                     </section>
                 </div>
             </div>
@@ -298,8 +306,12 @@
             <div class="inner">
                 <!-- Feature 2 -->
                 <section class="container box feature2 ">
-                    <img class="banner-ads-270" src="images/ads500x270.png" alt="banner" />
-                    <img class="banner-ads-270" src="images/ads500x270.png" alt="banner" />
+                    <a href="http://www.lucascmedeiros.com.br" target="_blank">
+                        <img class="banner-ads-270" src="images/ads500x270.png" alt="banner" />
+                    </a>
+                    <a href="http://www.lucascmedeiros.com.br" target="_blank">
+                        <img class="banner-ads-270" src="images/ads500x270.png" alt="banner" />
+                    </a>
                 </section>
             </div>
         </div>
