--- a/lista/regras-grupo-trocas.html
+++ b/lista/regras-grupo-trocas.html
@@ -50,6 +50,7 @@
                         para usuários que consigam fazer suas negociações em
                         <span class="font-800">Belo Horizonte e região.</span>
                     </h5>
+                    <hr />
                     <h5 class="font-800 mt-3">
                         <span class="text-danger">ATENÇÃO:</span>
                         Chat restrito
@@ -92,16 +93,16 @@
                             <li>Links de leilões</li>
                             <li>Publicações de promoções de lojas, editoras, etc</li>
                             <li>Publicidade externa, divulgação de outros canais, grupos, etc</li>
+                            <li class="mt-3">
+                                É proibida a permanência de um mesmo usuário nos dois grupos. Ambos possuem a mesma
+                                finalidade e o segundo foi criado para possibilitar o acesso de mais pessoas após a
+                                lotação do primeiro. <br />
+                                <strong>
+                                    Caso queira que sua oferta seja vista por usuários de ambos os grupos não deixe de
+                                    utilizar a Lista de Trocas & Vendas do site.
+                                </strong>
+                            </li>
                         </ul>
-                    </div>
-                    <div class="text-danger">
-                        É proibida a permanência de um mesmo usuário nos dois grupos. Ambos possuem a mesma finalidade
-                        e o segundo foi criado para possibilitar o acesso de mais pessoas após a lotação do primeiro.
-                        <br />
-                        <strong>
-                            Caso queira que sua oferta seja vista por usuários de ambos os grupos não deixe de utilizar
-                            a Lista de Trocas & Vendas do site.
-                        </strong>
                     </div>
                 </div>
                 <div class="regras__evitar mt-4 text-primary">
