Add paginacao e links grupos. Corrigir bug preco

--- a/site/index.html
+++ b/site/index.html
@@ -63,9 +63,9 @@
                     </div>
                 </header>
 
-                <!-- Banner -->
+                <!-- Logo -->
                 <div id="banner">
-                    <a href="http://www.lucascmedeiros.com.br" target="_blank">
+                    <a href="/" target="_blank">
                         <img class="w3-animate-zoom" src="images/bgbh-logo.png" alt="logo BGBH" />
                     </a>
                 </div>
@@ -147,7 +147,7 @@
                     <!-- Feature 2 -->
                     <section class="container box feature2 banner-area banner-unico">
                         <div class="d-flex align-center justify-center banner-pequeno">
-                            <a href="http://www.lucascmedeiros.com.br" target="_blank">
+                            <a href="/testabannerpequeno.html" target="_blank">
                                 <img class="banner-ads-90" src="images/ads728x90.png" alt="banner" />
                             </a>
                         </div>
@@ -160,10 +160,10 @@
                 <div class="inner">
                     <!-- Feature 2 -->
                     <section class="container box feature2 d-flex align-center">
-                        <a href="http://www.lucascmedeiros.com.br" target="_blank">
+                        <a href="/testabannergrande.html" target="_blank">
                             <img class="banner-ads-270" src="images/ads500x270.png" alt="banner" />
                         </a>
-                        <a href="http://www.lucascmedeiros.com.br" target="_blank">
+                        <a href="/testabannergrande.html" target="_blank">
                             <img class="banner-ads-270" src="images/ads500x270.png" alt="banner" />
                         </a>
                     </section>
@@ -221,7 +221,8 @@
 
                                         <!-- Excerpt -->
                                         <article class="box excerpt">
-                                            <a href="#" class="image imagem-grupos">
+                                            <a target="_blank" href="https://chat.whatsapp.com/HOCy0QO9cggCsk2X2ESKXo"
+                                                class="image imagem-grupos">
                                                 <img src="images/grupo-trocas.png"
                                                     alt="grupo de whatsapp trocas e vendas" class="auto-img"
                                                     data-aos-duration="15000" data-aos="zoom-in-right" />
@@ -229,7 +230,9 @@
                                             <div class="descricao-grupos" data-aos-duration="15000" data-aos="fade-left"
                                                 data-aos-delay="300">
                                                 <header class="titulos-grupos">
-                                                    <h3><a href="#">BGBH - Trocas & Vendas</a>
+                                                    <h3><a target="_blank"
+                                                            href="https://chat.whatsapp.com/HOCy0QO9cggCsk2X2ESKXo">BGBH
+                                                            - Trocas & Vendas</a>
                                                     </h3>
                                                 </header>
                                                 <p>O grupo é <span class="font-800">EXCLUSIVO</span> para Belo Horizonte
@@ -248,7 +251,8 @@
 
                                         <!-- Excerpt -->
                                         <article class="box excerpt">
-                                            <a href="#" class="image imagem-grupos">
+                                            <a href="https://chat.whatsapp.com/K7OMoPn1nfyEl4EDt8sUyi" target="_blank"
+                                                class="image imagem-grupos">
                                                 <img src="images/grupo-resenha.png" alt="grupo de whatsapp resenha"
                                                     class="auto-img" data-aos-duration="15000"
                                                     data-aos="zoom-in-right" />
@@ -256,7 +260,11 @@
                                             <div class="descricao-grupos" data-aos-duration="15000" data-aos="fade-left"
                                                 data-aos-delay="300">
                                                 <header class="titulos-grupos">
-                                                    <h3><a href="#">BGBH - Resenha BG</a></h3>
+                                                    <h3>
+                                                        <a target="_blank"
+                                                            href="https://chat.whatsapp.com/K7OMoPn1nfyEl4EDt8sUyi">BGBH
+                                                            - Resenha BG</a>
+                                                    </h3>
                                                 </header>
                                                 <p>Grupo voltado para a interação entre amantes de Boardgame. BG é o que
                                                     nos uni mas um bom papo fora do tema não é proibido. Novidades,
@@ -271,7 +279,8 @@
 
                                         <!-- Excerpt -->
                                         <article class="box excerpt">
-                                            <a href="#" class="image imagem-grupos">
+                                            <a target="_blank" href="https://chat.whatsapp.com/HJ8AnItrIGUDtpkSgIF3Nn"
+                                                class="image imagem-grupos">
                                                 <img src="images/grupo-ofertas.png" alt="grupo de whatsapp ofertas"
                                                     class="auto-img" data-aos-duration="15000"
                                                     data-aos="zoom-in-right" />
@@ -279,13 +288,16 @@
                                             <div class="descricao-grupos" data-aos-duration="15000" data-aos="fade-left"
                                                 data-aos-delay="300">
                                                 <header class="titulos-grupos">
-                                                    <h3><a href="#">BGBH - Ofertas BG</a></h3>
+                                                    <h3><a target="_blank"
+                                                            href="https://chat.whatsapp.com/HJ8AnItrIGUDtpkSgIF3Nn">BGBH
+                                                            - Ofertas BG</a></h3>
                                                 </header>
                                                 <p>
                                                     <strong class="font-green">NOVIDADE!</strong>
                                                     Grupo voltado para divulgação de oportunidades e ofertas de
                                                     Boardgames. Suas regras e funcionalidade ainda estão sendo
-                                                    definidas.</p>
+                                                    definidas.
+                                                </p>
                                                 <p class="font-red restricoes-grupos font-800">
                                                     <span class="font-dark-red">Restrições:</span>
                                                     Sem chat
@@ -306,10 +318,10 @@
             <div class="inner">
                 <!-- Feature 2 -->
                 <section class="container box feature2 ">
-                    <a href="http://www.lucascmedeiros.com.br" target="_blank">
+                    <a href="/testabannergrande.html" target="_blank">
                         <img class="banner-ads-270" src="images/ads500x270.png" alt="banner" />
                     </a>
-                    <a href="http://www.lucascmedeiros.com.br" target="_blank">
+                    <a href="/testabannergrande.html" target="_blank">
                         <img class="banner-ads-270" src="images/ads500x270.png" alt="banner" />
                     </a>
                 </section>
@@ -389,26 +401,30 @@
                                             <span class="wpcf7-form-control-wrap your-name"><input type="text"
                                                     name="your-name" value="" size="40"
                                                     class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required"
-                                                    aria-required="true" aria-invalid="false" /></span> </label></p>
+                                                    aria-required="true" aria-invalid="false" /></span> </label>
+                                    </p>
                                     <p>
                                         <label> Email<br />
                                             <span class="wpcf7-form-control-wrap your-email"><input type="email"
                                                     name="your-email" value="" size="40"
                                                     class="wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-required wpcf7-validates-as-email"
-                                                    aria-required="true" aria-invalid="false" /></span> </label></p>
+                                                    aria-required="true" aria-invalid="false" /></span> </label>
+                                    </p>
                                     <p>
                                         <label> Assunto (opcional)<br />
                                             <span class="wpcf7-form-control-wrap your-subject"><input type="text"
                                                     name="your-subject" value="" size="40"
                                                     class="wpcf7-form-control wpcf7-text" aria-invalid="false" /></span>
-                                        </label></p>
+                                        </label>
+                                    </p>
                                     <p>
                                         <label> Mensagem<br />
                                             <span class="wpcf7-form-control-wrap your-message"><textarea
                                                     name="your-message" cols="40" rows="4"
                                                     class="wpcf7-form-control wpcf7-textarea wpcf7-validates-as-required"
                                                     aria-required="true" aria-invalid="false"></textarea></span>
-                                        </label></p>
+                                        </label>
+                                    </p>
                                     <p><input type="submit" value="Enviar"
                                             class=" btn-primary wpcf7-form-control wpcf7-submit" />
                                     </p>
