--- a/regras-lista.html
+++ b/regras-lista.html
@@ -4,6 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta property="og:title" content="BoardgameBH [BGBH]">
+    <meta property="og:site_name" content="BoardgameBH [BGBH]">
+    <meta property="og:url" content="http://www.bgbh.com.br/regras-lista.html">
+    <meta property="og:description" content="Um portal feito para você que ama boardgame.">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="http://bgbh.com.br/images/og-image.jpg">
+    <meta property="og:image:secure_url" content="http://bgbh.com.br/images/og-image.jpg">
+
     <link rel="icon" type="image/png" href="https://lucascmedeiros.com.br/bgbh/favicon.ico" />
     <link href="lista/dist/assets/styles/style.css" rel="stylesheet" type="text/css">
     <title>Regras Planilha</title>
@@ -29,13 +38,7 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/">Site</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/lista">Lista <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/lista/adicionar-jogo.php">Adicionar jogo</a>
+                    <a class="nav-link" href="/">Voltar para o site</a>
                 </li>
             </ul>
         </div>
