--- a/regras-grupo-trocas.html
+++ b/regras-grupo-trocas.html
@@ -4,6 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta property="og:title" content="BoardgameBH [BGBH]">
+    <meta property="og:site_name" content="BoardgameBH [BGBH]">
+    <meta property="og:url" content="http://www.bgbh.com.br/regras-grupo-trocas.html">
+    <meta property="og:description" content="Um portal feito para você que ama boardgame.">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="http://bgbh.com.br/images/og-image.jpg">
+    <meta property="og:image:secure_url" content="http://bgbh.com.br/images/og-image.jpg">
+
     <link rel="icon" type="image/png" href="https://lucascmedeiros.com.br/bgbh/favicon.ico" />
     <link href="lista/dist/assets/styles/style.css" rel="stylesheet" type="text/css">
     <title>Regras Grupo Trocas & Vendas</title>
@@ -29,18 +38,12 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/">Site</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/lista">Lista <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/lista/adicionar-jogo.php">Adicionar jogo</a>
+                    <a class="nav-link" href="/">Voltar para o site</a>
                 </li>
             </ul>
         </div>
     </nav>
-    <div class="col-12 mt-4 px-4">
+    <div class="col-12 my-4 px-4">
         <h3 class="font-800">GRUPO TROCAS & VENDAS BGBH I e II</h4>
             <div class="regras font-gray mt-4">
                 <div class="regras__geral">
@@ -93,21 +96,30 @@
                             <li>Links de leilões</li>
                             <li>Publicações de promoções de lojas, editoras, etc</li>
                             <li>Publicidade externa, divulgação de outros canais, grupos, etc</li>
-                            <li class="mt-3">
-                                É proibida a permanência de um mesmo usuário nos dois grupos. Ambos possuem a mesma
-                                finalidade e o segundo foi criado para possibilitar o acesso de mais pessoas após a
-                                lotação do primeiro. <br />
-                                <strong>
-                                    Caso queira que sua oferta seja vista por usuários de ambos os grupos não deixe de
-                                    utilizar a Lista de Trocas & Vendas do site.
-                                </strong>
-                            </li>
                         </ul>
+                        <div class="mt-3 text-danger">
+                            É proibida a permanência de um mesmo usuário nos dois grupos. Ambos possuem a mesma
+                            finalidade e o segundo foi criado para possibilitar o acesso de mais pessoas após a
+                            lotação do primeiro. <br />
+                            <strong>
+                                Caso queira que sua oferta seja vista por usuários de ambos os grupos não deixe de
+                                utilizar a Lista de Trocas & Vendas do site.
+                            </strong>
+                        </div>
                     </div>
                 </div>
                 <div class="regras__evitar mt-4 text-primary">
                     <div class="font-800">EVITE</div>
-                    <li>Envio de fotos no grupo (mande diretamente para os interessados).</li>
+                    <ul>
+                        <li>Envio de fotos no grupo (mande diretamente para os interessados).</li>
+                        <li>O Envio repetitivo das ofertas em um curto período de tempo.
+                            <br />
+                            <span class="minor-text">(Devido a baixa rotatividade de entrada não existe necessidade que
+                                a
+                                mesma oferta seja
+                                repetida todos os dias)</span>
+                        </li>
+                    </ul>
                 </div>
             </div>
             <div class="regras__interesse_e_duvidas mt-4">
@@ -115,31 +127,37 @@
                     Interessou em algum jogo ou ficou com alguma dúvida sobre o anúncio?
                 </span>
                 <br />
-                <li>
-                    Contate o dono por mensagem direta, no privado.
-                </li>
+                <ul>
+                    <li>
+                        Contate o dono por mensagem direta, no privado.
+                    </li>
+                </ul>
             </div>
             <div class="regras__jogadores_outras_regioes mt-4">
                 <div class="font-800">
                     <span class="text-danger">ATENÇÃO!</span>
                     Usuários de outras regiões
                 </div>
-                <li>
-                    Só podem participar caso possuam formas de entrega/retirada de jogos em
-                    <strong>Belo Horizonte</strong>.
-                </li>
+                <ul>
+                    <li>
+                        Só podem participar caso possuam formas de entrega/retirada de jogos em
+                        <strong>Belo Horizonte</strong>.
+                    </li>
+                </ul>
             </div>
             <div class="regras__respeito mt-4">
                 <span class="font-800">
                     RESPEITO E EDUCAÇÃO COM TODOS
                 </span>
-                <li>
-                    Não serão tolerados xingamentos, piadinhas, pornografia nem
-                    <strong>
-                        qualquer tipo de atitude preconceituosa,
-                    </strong>
-                    racismo, machismo, homofobia, misoginia, e outros.
-                </li>
+                <ul>
+                    <li>
+                        Não serão tolerados xingamentos, piadinhas, pornografia nem
+                        <strong>
+                            qualquer tipo de atitude preconceituosa,
+                        </strong>
+                        racismo, machismo, homofobia, misoginia, e outros.
+                    </li>
+                </ul>
             </div>
 
             <div class="mt-4">
@@ -151,6 +169,11 @@
 
             <p class="font-weight-bold mt-2"> Em caso de dúvidas, entre em contato conosco pelos grupos ou email da
                 BoradgameBH.</p>
+
+            <div>
+                <a class="btn btn-primary btn-md" href="https://chat.whatsapp.com/HOCy0QO9cggCsk2X2ESKXo"
+                    target="_blank">ENTRAR NO GRUPO</a>
+            </div>
     </div>
 
 </body>
