Adicionar contador regressivo

--- a/site/index.html
+++ b/site/index.html
@@ -39,7 +39,10 @@
         <div class="logo">
             <img data-aos="zoom-in-down" data-aos-delay="1500" src="images/bgbh-logo.png" alt="logo BGBH" />
         </div>
-        <h2>EM BREVE</h2>
+        <h2>Faltam
+            <span id="counter"></span>
+            para o lançamento!
+        </h2>
     </div>
     <!-- Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
