Preparacao para ir pro ar

--- a/site/home.html
+++ b/site/home.html
@@ -86,11 +86,23 @@
                                     <h2>Nosso portal ainda está em construção</h2>
                                     <p>
                                         Mas você já pode aproveitar nossa lista de <strong>trocas & vendas</strong>
+                                        (exclusiva BH),
                                         <br />
-                                        <strong>exclusiva</strong> para jogadores de <strong>Belo Horizonte</strong> e
-                                        região
+                                        nossos <strong>desafios e torneios</strong> e também conhecer nossos
+                                        <strong>grupos de whatsapp</strong>
                                     </p>
                                 </header>
+                            </div>
+                            <div class="col-12 titulo-lista">
+                                <h2 class="font-800 text-start" data-aos="fade-up" data-aos-duration="15000"
+                                    data-aos-easing="ease-in-out">
+                                    <i class="fas fa-exchange-alt"></i> Lista de trocas & vendas
+                                </h2>
+                                <small>
+                                    (Exclusiva para
+                                    <span class="font-800">Belo Horizonte</span>
+                                    e região)
+                                </small>
                             </div>
                             <div class="col-4">
                                 <section>
@@ -147,8 +159,9 @@
                     <!-- Feature 2 -->
                     <section class="container box feature2 banner-area banner-unico">
                         <div class="d-flex align-center justify-center banner-pequeno">
-                            <a href="/testabannerpequeno.html" target="_blank">
-                                <img class="banner-ads-90" src="images/ads728x90.png" alt="banner" />
+                            <a href="https://www.catarse.me/timemachinerocket" target="_blank">
+                                <img class="banner-ads-90" src="images/banners/banner_timemachine_728x90.png"
+                                    alt="banner Time Machine Rocket" />
                             </a>
                         </div>
                     </section>
@@ -160,11 +173,12 @@
                 <div class="inner">
                     <!-- Feature 2 -->
                     <section class="container box feature2 d-flex align-center">
-                        <a href="/testabannergrande.html" target="_blank">
-                            <img class="banner-ads-270" src="images/ads500x270.png" alt="banner" />
+                        <a href="https://www.catarse.me/timemachinerocket" target="_blank">
+                            <img class="banner-ads-270" src="images/banners/banner_timemachine_500x270.png"
+                                alt="banner" />
                         </a>
-                        <a href="/testabannergrande.html" target="_blank">
-                            <img class="banner-ads-270" src="images/ads500x270.png" alt="banner" />
+                        <a href="https://tabulovers.wixsite.com/tabulovers" target="_blank">
+                            <img class="banner-ads-270" src="images/banners/banner-tabulovers.png" alt="banner" />
                         </a>
                     </section>
                 </div>
@@ -321,8 +335,8 @@
             <div class="inner">
                 <!-- Feature 2 -->
                 <section class="container box feature2 ">
-                    <a href="/testabannergrande.html" target="_blank">
-                        <img class="banner-ads-270" src="images/ads500x270.png" alt="banner" />
+                    <a href="https://tabulovers.wixsite.com/tabulovers" target="_blank">
+                        <img class="banner-ads-270" src="images/banners/banner-tabulovers.png" alt="banner" />
                     </a>
                     <a href="/testabannergrande.html" target="_blank">
                         <img class="banner-ads-270" src="images/ads500x270.png" alt="banner" />
