--- a/site/index.html
+++ b/site/index.html
@@ -39,9 +39,8 @@
         <div class="logo">
             <img data-aos="zoom-in-down" data-aos-delay="1500" src="images/bgbh-logo.png" alt="logo BGBH" />
         </div>
-        <h2>Faltam
-            <span id="counter"></span>
-            para o lançamento!
+        <h2> Lançamento
+            <span id="counter"> HOJE (04/01)!</span>
         </h2>
     </div>
     <!-- Scripts -->
