--- a/regras-grupo-trocas.html
+++ b/regras-grupo-trocas.html
@@ -164,7 +164,7 @@
                 Para ver as regras de utilização da
                 <span class="font-weight-bold">Lista de Trocas & Vendas</span>,
                 clique no link a seguir:
-                <a href="" target="_blank">Ver regras de utilização da lista</a>
+                <a href="/regras-lista.html" target="_blank">Ver regras de utilização da lista</a>
             </div>
 
             <p class="font-weight-bold mt-2"> Em caso de dúvidas, entre em contato conosco pelos grupos ou email da
