--- a/regras-grupo-trocas.html
+++ b/regras-grupo-trocas.html
@@ -168,7 +168,7 @@
             </div>
 
             <p class="font-weight-bold mt-2"> Em caso de dúvidas, entre em contato conosco pelos grupos ou email da
-                BoradgameBH.</p>
+                BoardgameBH.</p>
 
             <div>
                 <a class="btn btn-primary btn-md" href="https://chat.whatsapp.com/HOCy0QO9cggCsk2X2ESKXo"
