--- a/site/index.html
+++ b/site/index.html
@@ -14,6 +14,16 @@
 
         gtag('config', 'G-PM1S230CVN');
     </script>
+    <!-- Google Tag Manager -->
+    <script>(function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-WB466ZC');</script>
+    <!-- End Google Tag Manager -->
     <title>BoardgameBH [BGBH]</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -35,6 +45,10 @@
 </head>
 
 <body class="homepage is-preload">
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WB466ZC" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div id="page-wrapper">
 
         <!-- Header -->
@@ -177,7 +191,7 @@
                             <img class="banner-ads-270" src="images/banners/banner_timemachine_500x270.png"
                                 alt="banner" />
                         </a>
-                        <a href="https://tabulovers.wixsite.com/tabulovers" target="_blank">
+                        <a class="hidden-sm" href="https://tabulovers.wixsite.com/tabulovers" target="_blank">
                             <img class="banner-ads-270" src="images/banners/banner-tabulovers.png" alt="banner" />
                         </a>
                     </section>
@@ -337,11 +351,7 @@
             <div class="inner">
                 <!-- Feature 2 -->
                 <section class="container box feature2" id="banner-ads-footer">
-                    <a href="https://tabulovers.wixsite.com/tabulovers" target="_blank">
-                        <img class="banner-ads-270" src="images/banners/banner-tabulovers.png" alt="banner" />
-                    </a>
-                    <a href="/testabannergrande.html" target="_blank">
-                        <img class="banner-ads-270" src="images/ads500x270.png" alt="banner" />
+                    <a href="#" target="_blank">
                     </a>
                 </section>
             </div>
@@ -349,7 +359,7 @@
         <div class="wrapper style2 banners-grandes hidden-sm">
             <div class="inner">
                 <!-- Feature 2 -->
-                <section class="container box feature2">
+                <section class="container box feature2" id="banner-ads-footer-duplo">
                     <a href="https://tabulovers.wixsite.com/tabulovers" target="_blank">
                         <img class="banner-ads-270" src="images/banners/banner-tabulovers.png" alt="banner" />
                     </a>
