Adicionar historico removidos e regras lgpd

--- a/regras-lista.html
+++ b/regras-lista.html
@@ -104,7 +104,7 @@
                     <i class="fas fa-edit"></i>
                     Alterar jogos
                 </h5>
-                <p>Ainda não temos uma maneira segura para alteração de itens. <br />
+                <p>Ainda não temos uma maneira definitiva para alteração de itens. <br />
                     Provisoriamente, caso queira fazer alguma alteração
                     <strong>
                         entre em contato com os adminstradores.
@@ -112,7 +112,6 @@
                 </p>
             </section>
         </div>
-
 
         <p> Os jogos na lista serão
             <strong>
@@ -124,6 +123,15 @@
             </strong>
             após determinados períodos.
         </p>
+
+        <div>
+            <p>
+                Ao adicionar uma oferta na lista, todos os dados fornecidos nos formulários de inclusão e remoção podem
+                ser compartilhados com os demais usuários. Caso utilizado, ficarão de forma pública, de acordo com as
+                necessidades observadas para a entrega de informações claras e úteis para todos.
+            </p>
+        </div>
+
         <p class="font-weight-bold font-red">
             Nenhuma negociação utilizando a <strong>Lista de Trocas & Vendas</strong> é de responsabilidade do
             Boardgame BH.
